[gd_scene load_steps=6 format=3 uid="uid://cahyb42t68n2x"]

[ext_resource type="PackedScene" uid="uid://6biqldqluklg" path="res://assets/scenes/enemy.tscn" id="1_a45rv"]
[ext_resource type="PackedScene" uid="uid://cierws6fcdu0c" path="res://assets/scenes/weapon.tscn" id="3_ix23b"]
[ext_resource type="Script" path="res://assets/scripts/bulletmanager.gd" id="4_1bc3l"]
[ext_resource type="Script" path="res://assets/scripts/enemy_turretAI.gd" id="5_i3s6b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5tg4p"]
radius = 160.0

[node name="Enemy" instance=ExtResource("1_a45rv")]

[node name="Sprite2D" parent="CharacterBody2D" index="0"]
rotation = 1.5708

[node name="Weapon" parent="CharacterBody2D" index="2" instance=ExtResource("3_ix23b")]
position = Vector2(33, 0)
damage = 10
speed = 3

[node name="BulletManager" type="Node2D" parent="CharacterBody2D" index="3"]
script = ExtResource("4_1bc3l")

[node name="AI" type="Node2D" parent="." index="3"]
script = ExtResource("5_i3s6b")
weapon_cooldown = 1.0
patrol_range = 60

[node name="PlayerDetectionZone" type="Area2D" parent="AI" index="0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI/PlayerDetectionZone" index="0"]
shape = SubResource("CircleShape2D_5tg4p")

[node name="PatrolTimer" type="Timer" parent="AI" index="1"]
wait_time = 3.0

[connection signal="body_entered" from="AI/PlayerDetectionZone" to="AI" method="_on_player_detection_zone_body_entered"]
[connection signal="body_exited" from="AI/PlayerDetectionZone" to="AI" method="_on_player_detection_zone_body_exited"]
[connection signal="timeout" from="AI/PatrolTimer" to="AI" method="_on_patrol_timer_timeout"]
